Clear update button text and timer label
Clear button text and timer label during update.

--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
       const btn = document.getElementById('update-btn');
       const timerLabel = document.getElementById('auto-timer');
       btn.style.backgroundColor = "#555";
-      btn.textContent = "Updating...";
-      timerLabel.textContent = "Fetching new data...";
+      btn.textContent = " ";
+      timerLabel.textContent = " ";
 
       const dateFrom = document.getElementById('date-from').value;
       const dateTo = document.getElementById('date-to').value;
